# fixed_width_unsigned_integer_manipulation_library

./: CMakeLists.txt  README.md
include/: uint16.h  uint32.h  uint64.h  uint8.h
source/: uint16.c  uint32.c  uint64.c  uint8.c
test/: build.sh  test.c  test_constants.c  test_constants.h  test_uint16.c  test_uint16.h  test_uint32.c  test_uint32.h  test_uint64.c  test_uint64.h  test_uint8.c  test_uint8.h
